--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -48,23 +48,23 @@
 						<td><%= book.body %></td>
 						
 						<td>
-									          	<% if book.favorited_by?(current_user) %>
-														    <p>
-														      <%= link_to book_favorites_path(book.id), class: 'post-btn', method: :delete do %>
-														        <i class="fa-solid fa-heart" style="color: red;"></i>
-														        <span class='post-btn-text' style="color: red;"><%= book.favorites.count %></span>
-														        
-														      <% end %>
-														    </p>
-														    <% else %>
-														    <p>
-														      <%= link_to book_favorites_path(book.id), class: 'post-btn', method: :post do %>
-														        <i class="fa-solid fa-heart" style="color: blue;"></i>
-														        <span class='post-btn-text' style="color: blue;"><%= book.favorites.count %></span>
-														        
-														      <% end %>
-														    </p>
-													    <% end %>
+								<% if book.favorited_by?(current_user) %>
+									<p>
+										<%= link_to book_favorites_path(book.id), class: 'post-btn', method: :delete do %>
+											<i class="fa-solid fa-heart" style="color: red;"></i>
+											<span class='post-btn-text' style="color: red;"><%= book.favorites.count %></span>
+											
+										<% end %>
+									</p>
+									<% else %>
+									<p>
+										<%= link_to book_favorites_path(book.id), class: 'post-btn', method: :post do %>
+											<i class="fa-solid fa-heart" style="color: blue;"></i>
+											<span class='post-btn-text' style="color: blue;"><%= book.favorites.count %></span>
+											
+										<% end %>
+									</p>
+								<% end %>
 				        </td>
 			  			
 						    <td><p>コメント数：<%= book.book_comments.count %></p></td>
@@ -72,7 +72,9 @@
 					<% end %>
 				</tbody>
 			</table>
-			
+			div class = "my-2">
+        <%= render "tag_list", tags: @tags %>
+      </div>
 		</div>
 
 	</div>
