--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -72,7 +72,7 @@
 					<% end %>
 				</tbody>
 			</table>
-			div class = "my-2">
+			<div class = "my-2">
         <%= render "tag_list", tags: @tags %>
       </div>
 		</div>
