--- a/app/views/books/_book_new.html.erb
+++ b/app/views/books/_book_new.html.erb
@@ -18,7 +18,7 @@
     	</div>
 
       <div class="form-group">
-        <%= f.label :tag_list, "タグ(,で複数指定できます)" %>
+        <%= f.label :tag_list, "タグ(,で複数)" %>
         <%= f.text_field :tag_list, value: book.tag_list.join(',') ,class:"form-control tag_form" %>
       </div>
     	
