--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,21 +6,14 @@
 				<%= render 'books/book_new', book: @book %>
 			</div>
 		
-		
-		
-		
-		
-		<!--<% @users.each do |user| %>-->
-		<!--	<div>-->
-			  
-		<!--	  <p>image：<%= image_tag user.get_profile_image(100,100) %></p>-->
-		<!--	  <p>name：<%= user.name %></p>-->
-			  
-		<!--	  <%= link_to "Show", user_path(user.id) %>-->
-		<!--	</div>-->
-		<!--<% end %>-->
-		
 		<div class="col-md-8 offset-md-1">
+		<h1>ユーザー検索</h1>
+			<%= search_form_for @q, url: search_users_path do |f| %>
+				<%= f.label :name_cont, 'ユーザー名' %>
+				<%= f.search_field :name_cont %>
+				<br>
+				<%= f.submit '検索' %>
+			<% end %>
 		
 			<h1>Users</h1>
 			
