--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -5,7 +5,14 @@
       <p>In  <i class="fas fa-book"></i><strong>Bookers</strong>, </p>
       <p>you can share and exchange  your opinions , inpressions , and emotions</p>
       <p> about various books!</p>
-      <div class="btn-wrapper col-10 mx-auto">
+      <div class="previews">
+      <div class="slider">
+          <%= image_tag 'book1', class: "card-img-top show-img" %>
+          <%= image_tag 'book2', class: "card-img-top show-img" %>
+          <%= image_tag 'book3', class: "card-img-top show-img" %>
+      </div>
+    </div>
+      <div class="btn-wrapper col-10 mx-auto mt-5">
         <div class="row">
           <a class="btn btn-info btn-sm btn-block mb-3 sign_in" href="/users/sign_in">Log in</a>
         </div>
