google map api 途中

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -19,6 +19,26 @@
         <%= f.label :email %><br />
         <%= f.email_field :email, autocomplete: "email" %>
       </div>
+
+      <div class"field">
+          <%= f.label :postal_code %><br />
+          <%= f.text_field :postal_code, autofocus: true %>
+        </div>
+
+        <div class"field">
+          <%= f.label :prefecture_code %><br />
+          <%= f.collection_select :prefecture_code, JpPrefecture::Prefecture.all, :code, :name, { prompt: '選択してください' }, class: 'form-control' %>
+        </div>
+
+        <div class"field">
+          <%= f.label :city %><br />
+          <%= f.text_field :city, autofocus: true %>
+        </div>
+
+        <div class"field">
+          <%= f.label :street %><br />
+          <%= f.text_field :street, autofocus: true %>
+        </div>
     
       <div class="field">
         <%= f.label :password %>
