--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -33,6 +33,26 @@
             <label for="inputIntroduction">Introduction</label></br>
             <%= f.text_field :introduction, autofocus: true, id:"Introduction"%></br>
           </div>
+
+          <div class"form-group">
+          <%= f.label :postal_code %><br />
+          <%= f.text_field :postal_code, autofocus: true %>
+        </div>
+
+        <div class"form-group">
+          <%= f.label :prefecture_code %><br />
+          <%= f.collection_select :prefecture_code, JpPrefecture::Prefecture.all, :code, :name, { prompt: '選択してください' }, class: 'form-control' %>
+        </div>
+
+        <div class"form-group">
+          <%= f.label :city %><br />
+          <%= f.text_field :city, autofocus: true %>
+        </div>
+
+        <div class"form-group">
+          <%= f.label :street %><br />
+          <%= f.text_field :street, autofocus: true %>
+        </div>
           
           <div class="form-group">
             <%= f.submit 'Update User', class: 'btn btn-secondary' %>
