--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,27 +1,3 @@
-	<!--<%= alert %>-->
-
-
-<!-- ユーザーの詳細 -->
-<!--<div>-->
-<!--  <h2>User info</h2>-->
-<!--  <%= image_tag @user.get_profile_image(100,100) %>-->
-  
-<!--  <h3>name  <%= @user.name %></h3>-->
-  
-<!--  <h3>introduction <%= @user.introduction %></h3>-->
-  
-  <!--<%= current_user.name %>-->
-  <!--<%= current_user.introduction %>-->
-  
-  <!--<% if @user == current_user %>-->
-  <!--	<p><%= link_to "プロフィール編集", edit_user_path(@user.id) %></p>-->
-  <!--<% end %>	-->
-<!--</div>-->
-
-
-
-
-
 <div class="container px-5 px-sm-0">
 
 		<div class="row">
@@ -80,23 +56,60 @@
 								      	</tbody>
 								      </table>
 					</div>
-					
-					
-					<!-- ユーザーの投稿一覧 -->
-						<!--<h1>Book detail</h1>-->
-						<!--<% @books.each do |book| %>-->
-						<!--	<div>-->
-							  
-							  
-						<!--	  <p>Title：-->
-						<!--	    <%= link_to book_path(book.id) do %> -->
-						<!--	      <%= book.title %>-->
-						<!--	    <% end %>-->
-						<!--	  </p>-->
-							  
-						<!--	  <p>Opinion：<%= book.body %></p>-->
-							  
-						<!--	</div>-->
-						<!--<% end %>-->
+					<% if @user==current_user %>
+					<div class="row">
+						<div class="col">
+							<h1>Your MAP</h1>
+							<div id="map" style="width: 500px; height: 300px;", class="mx-auto"></div>
+						</div>
+					</div>
+				<% end %>
+
+	<script>
+				function drawMap(address) {
+						var geocoder = new google.maps.Geocoder();
+						//住所から座標を取得する
+						geocoder.geocode(
+										{
+												'address': address,//検索する住所　〒◯◯◯-◯◯◯◯ 住所　みたいな形式でも検索できる
+												'region': 'jp'
+										},
+										function (results, status) {
+												if (status == google.maps.GeocoderStatus.OK) {
+														google.maps.event.addDomListener(window, 'load', function () {
+																var map_tag = document.getElementById('map');
+																// 取得した座標をセット緯度経度をセット
+																var map_location = new google.maps.LatLng(results[0].geometry.location.lat(),results[0].geometry.location.lng());
+																//マップ表示のオプション
+																var map_options =
+																{
+																		zoom: 13,//縮尺
+																		center: map_location,//地図の中心座標
+																		//ここをfalseにすると地図上に人みたいなアイコンとか表示される
+																		disableDefaultUI: true,
+																		mapTypeId: google.maps.MapTypeId.ROADMAP//地図の種類を指定
+																};
+
+																//マップを表示する
+																var map = new google.maps.Map(map_tag, map_options);
+
+																//地図上にマーカーを表示させる
+																var marker = new google.maps.Marker({
+																		position: map_location,//マーカーを表示させる座標
+																		map: map//マーカーを表示させる地図
+																});
+														});
+												}else{
+													alert("住所から位置の取得ができませんでした。: " + status);
+													return;
+												}
+										}
+						);
+				}
+				$(function(){
+					drawMap("<%= "〒#{@user.postal_code} #{@user.prefecture_name}#{@user.city}#{@user.street}" %>");
+				});
+
+			</script>
 		</div>		
 </div>
